update safe map

--- a/docs/01.语言/01.Go/05.Safe map.md
+++ b/docs/01.语言/01.Go/05.Safe map.md
@@ -13,7 +13,13 @@ author:
 ---
 
 ## 一、基本原理
-* 
+* Map 类似于 Go `map[interface{}]interface{}` 以哈希表的方式存储键值对，但可以安全地由多个 goroutines 并发使用，无需额外的加锁；
+* 传统的 map 需要对整个 map 加锁，才能解决并发安全的问题，锁的粒度较大；
+* **Map 主要是以空间换时间，对读的部分采用原子操作和原子计数，对写的部分采用互斥锁，通过读写分离来降低锁的粒度，从而提高读写效率，适用于写少读多的场景**；
+* Map 类型针对两种常见用例进行了优化：
+  * （1）当给定 key 的值，只写入一次但读取多次时；
+  * （2）当多个 goroutine 读取、写入和覆盖不相交的 key 的值时。
+* 在这两种情况下，与单独的 Mutex 或 RWMutex 配对的 Go map 相比，使用 Map 可以显著减少锁竞争；
 
 ## 二、基本用法
 ### 1，Map
@@ -26,22 +32,51 @@ type Map struct {
 }
 ```
 * Map 是一个结构体类型，其内部字段都是私有的，不可直接访问；
+* **Map 在首次使用后不得复制**；
 * 使用时可像其他类型一样直接使用，不用单独加锁，如：`var m sync.Map` ；
+* **Map 没有重载 `[]` 运算符，不能直接以 `m[key]` 的方式访问或修改 m 中的元素**； 
+
 ### 2，Load
 * `func (m *Map) Load(key interface{}) (value interface{}, ok bool)`
-* Load 返回存储在 map 中对应键的值，如果不存在该键值，则返回 nil。ok 表示是否在 map 中找到该 key 对应的值；
+* Load 返回存储在 map 中 key 键对应的值，如果不存在该键值，则返回 nil。ok 表示是否在 map 中找到该 key 对应的值；
 * 如：`val, ok := m.Load("aaa")` ；
 
 ### 3，Store
 * `func (m *Map) Store(key, value interface{})`
 * Store 将 key、value 这个键值对存到 m 中；
-* 如
+* 如：`m.Store("aaa", 111)` ；
 
-### 4，加载并删除
+### 4，LoadOrStore
+* `func (m *Map) LoadOrStore(key, value interface{}) (actual interface{}, loaded bool)`
+* LoadOrStore 返回存储在 map 中 key 键对应的值，如果不存在该键值，则将 key、value 这个键值对存到 m 中；
+* 如果找到了 key 对应的值，则 loaded 结果为 true，否则为 false；
+* 如：`val, ok := m.LoadOrStore("aaa", 111)` ；
 
-### 5，删除
+### 5，LoadAndDelete
+* `func (m *Map) LoadAndDelete(key interface{}) (value interface{}, loaded bool)`
+* LoadAndDelete 删除键的值，并返回以前的值（如果有），loaded 表示 key 对应的值是否存在；
+* 如：`val, ok := m.LoadAndDelete("aaa", 111)` ；
 
-### 6，遍历
+### 6，Delete
+* `func (m *Map) Delete(key interface{})`
+* Delete 删除 key 对应的值；
+* 如：`m.Delete("aaa")` ；
 
+### 7，Range
+* `func (m *Map) Range(f func(key, value interface{}) bool)`
+* Range 遍历 m 中的键值对，并调用 f 函数对键值对进行处理，**当 f 返回 false 时，停止遍历**；
+* 如：
+  ```go
+	m.Range(func(key, value interface{}) bool {
+		k := key.(string)
+		val := value.(int)
+		if k == "aaa" {
+			fmt.Println(k, val)
+			return false
+		}
+		return true
+	})
+  ```
 
 ## 三、源码解读
+### 1，
