--- a/docs/01.语言/02.C++/00.C++的基本介绍.md
+++ b/docs/01.语言/02.C++/00.C++的基本介绍.md
@@ -12,4 +12,7 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 一、C++的发展
+## 一、C++特点
+* C语言代表的过程性语言；
+* C++在C语言基础上添加的类代表的面向对象语言；
+* C++模板支持的泛型编程；
