--- a/docs/01.语言/01.Go/05.Safe map.md
+++ b/docs/01.语言/01.Go/05.Safe map.md
@@ -17,8 +17,8 @@ author:
 * 传统的 map 需要对整个 map 加锁，才能解决并发安全的问题，锁的粒度较大；
 * **Map 主要是以空间换时间，对读的部分采用原子操作和原子计数，对写的部分采用互斥锁，通过读写分离来降低锁的粒度，从而提高读写效率，适用于写少读多的场景**；
 * Map 类型针对两种常见用例进行了优化：
-  * （1）当给定 key 的值，只写入一次但读取多次时；
-  * （2）当多个 goroutine 读取、写入和覆盖不相交的 key 的值时。
+  * （1）当给定 key 的值，只写入一次但读取多次时，例如不断增长的缓存类应用；
+  * （2）当多个 goroutine 读取、写入和覆盖不相交的 key 的值时；
 * 在这两种情况下，与单独的 Mutex 或 RWMutex 配对的 Go map 相比，使用 Map 可以显著减少锁竞争；
 
 ## 二、基本用法
@@ -79,4 +79,25 @@ type Map struct {
   ```
 
 ## 三、源码解读
-### 1，
+### 1，Map
+```go
+type Map struct {
+	mu Mutex
+
+	// read 包含映射内容中可安全并发访问的部分（保留或不保留 MU）。read 字段本身始终可以安全加载，但只能与 mu 一起存储。
+	// 存储在 read 中的条目可以在没有 mu 的情况下同时更新，但更新以前删除的条目需要将该条目复制到 dirty map 中，并在保留 mu 的情况下取消删除。
+	read atomic.Value // 存储 readOnly 结构体类型
+
+	// dirty 包含 map 中需要保留 MU 的部分。为了确保 dirty map 可以快速提升为 read map，它还包括 read map 中所有未删除的条目。
+	// 删除的条目不会存储在 dirty 中。清理 map 中已清除的条目必须取消删除并添加到 dirty map 中，然后才能将新值存储到 dirty map 中。
+	// 如果 dirty 为 nil，则下次写入映射时将通过创建干净映射的浅拷贝来初始化它，省略过时的条目。
+	dirty map[interface{}]*entry
+
+	// misses 计算自上次更新 read map 以来需要锁定 MU 以确定 key 是否存在的负载数。
+	// 一旦 misses 足够支付复制 dirty map 的成本，dirty map 将被提升为 read map（处于未修改状态），map 的下一个存储将创建一个新的 dirty 副本。
+	misses int // 加锁则计数，查询dirty时需要加锁
+}
+```
+* Map 是一个结构体类型，其内部字段都是私有的，不可直接访问；
+* mu 字段，互斥锁类型，当写 read map 或者读写 dirty map 时，需要加互斥锁
+* read 字段，原子类型，存储 readOnly 结构体类型的变量，存储的
