update safe map

--- a/docs/01.语言/01.Go/02.Slice的源码解读.md
+++ b/docs/01.语言/01.Go/02.Slice的源码解读.md
@@ -128,8 +128,8 @@ func makeslice(et *_type, len, cap int) unsafe.Pointer {
 * 扩容逻辑：
   * 当需要的容量是旧容量的 2 倍多时，直接为该值；
   * 否则：
-    * 旧容量小于 1024 时：
-      * 按照旧容量的 2 倍扩容；
+    * <span style="color: red;">旧容量小于 1024 时：</span>
+      * <span style="color: red;">按照旧容量的 2 倍扩容；</span>
     * 否则：
       * 直接对旧容量<span style="color: red;">**连续多次 1.25 倍**</span>进行扩容，直至大于需要的容量；
 * 按照内存对齐后，根据内存分配算法计算应该申请的内存大小；
