--- a/docs/01.语言/01.Go/05.Safe map.md
+++ b/docs/01.语言/01.Go/05.Safe map.md
@@ -12,16 +12,18 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 一、基本原理
+## 一、简述
 * Map 类似于 Go `map[interface{}]interface{}` 以哈希表的方式存储键值对，但可以安全地由多个 goroutines 并发使用，无需额外的加锁；
 * 传统的 map 需要对整个 map 加锁，才能解决并发安全的问题，锁的粒度较大；
+
+## 二、基本原理
 * <span style="color: red;">**Map 主要是以空间换时间，对读的部分采用原子操作和原子计数，对写的部分采用互斥锁，通过读写分离来降低锁的粒度，从而提高读写效率，适用于写少读多的场景**</span>；
 * Map 类型针对两种常见用例进行了优化：
   * （1）当给定 key 的值，只写入一次但读取多次时，例如不断增长的缓存类应用；
   * （2）当多个 goroutine 读取、写入和覆盖不相交的 key 的值时；
 * 在这两种情况下，与单独的 `Mutex` 或 `RWMutex` 配对的 Go map 相比，使用 Map 可以显著减少锁竞争；
 
-## 二、基本用法
+## 三、基本用法
 ### 1，Map
 ```go
 type Map struct {
@@ -79,7 +81,7 @@ type Map struct {
 	})
   ```
 
-## 三、源码解读
+## 四、源码解读
 ### 1，Map
 ```go
 type Map struct {
