--- a/docs/01.语言/01.Go/06.Mutex.md
+++ b/docs/01.语言/01.Go/06.Mutex.md
@@ -11,3 +11,30 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+## 一、简述
+* Mutex 是一种相对原始的同步机制，只有基础的同步功能，更高级别的同步最好通过 Channel 来实现；
+* 锁的对象被创建后，不允许复制；
+* 解锁一个未加锁的对象，会出现错误；
+
+## 二、基本原理
+* Mutex 可以处于 2 种操作模式：正常和饥饿。
+* 在正常模式下：
+  * 等待的 goroutine 按照先进先出的顺序排队，但是被唤醒的 goroutine 不会立即拥有互斥锁，而是与新到来的 goroutine 竞争锁的所有权；
+  * 因为新到来的 goroutine 有一个优势，它们已经在CPU上运行，并且可能有很多个，所以被唤醒的 goroutine 有可能失败，新到来的 goroutine 拿到锁后继续运行，能够避免上下文的切换；
+  * 在这种情况下，被唤醒的 goroutine 会在等待队列的前面排队，如果等的 goroutine 超过 1 毫秒未能获取互斥锁，则会将互斥锁切换到饥饿模式；
+* 在饥饿模式下：
+  * 互斥锁的所有权直接从解锁的 goroutine 移交给队列前面等待的 goroutine；
+  * 新到来的 goroutine 不会尝试获取互斥锁，也不会自旋，它们将自己排在等待队列的尾部；
+  * 如果获得锁的 goroutine 是等待队列中的最后一个，或是等待时间少于 1 ms，则会将互斥锁切换回正常模式；
+* 正常模式具有更好的性能，因为即使有其他阻塞的 goroutine 等待，当前 goroutine 也可以连续多次获取互斥锁；
+* 饥饿模式对于预防尾部延迟具有很好的作用，能够避免等待的 goroutine 饿死；
+
+## 三、基本用法
+```go
+var m sync.Mutex
+m.Lock()
+// ... do something
+m.UnLock()
+```
+## 四、源码解读
