--- a/docs/01.语言/01.Go/06.Sync.Mutex.md
+++ b/docs/01.语言/01.Go/06.Sync.Mutex.md
@@ -1,5 +1,5 @@
 ---
-title: Mutex
+title: Sync.Mutex
 date: 2023-10-29 22:14:25
 permalink: /pages/a54c7d/
 categories:
@@ -41,7 +41,7 @@ m.UnLock()
 ### 1，Mutex
 ```go
 type Mutex struct {
-	state int32  // 锁的状态，32 位，WaiterShift(29位)|Starving|Woken|Locked
+	state int32  // 锁的状态，32 位，二进制位： WaiterShift(29位)|Starving|Woken|Locked
 	sema  uint32 // 控制锁状态的信号量
 }
 const (
@@ -53,10 +53,11 @@ const (
 )
 ```
 * **Mutex 是互斥锁，其零值是未锁的状态，首次使用后不能被复制**；
-* `mutexLocked, mutexWoken, mutexStarving` 分别是
+* `mutexLocked, mutexWoken, mutexStarving` 分别是用于 `stat` 二进制位中低位 1、2、3 标志位；
+* `mutexWaiterShift` 用于记录等待的 goroutine 数量，程序中先右位运算后加到 `stat`，即 `stat` 二进制位中低位第四位开始，有多少个 1 则有多少等待的 goroutine；
 
 ### 2，Lock()
-:::detail
+:::details
 ```go
 // Lock 如果锁已经被使用了，则调用程序一直阻塞直到锁可用
 func (m *Mutex) Lock() {
@@ -100,7 +101,7 @@ func (m *Mutex) lockSlow() {
 			new |= mutexLocked
 		}
 		if old&(mutexLocked|mutexStarving) != 0 {
-			// 互斥锁饥饿模式或已经是加锁状态，则将 new 的 mutexWaiterShift 位置为 1（表示当前goroutine也成为Mutex的等待者）
+			// 互斥锁饥饿模式或已经是加锁状态，则将 new 的 mutexWaiterShift 开始的位置为 1（表示当前goroutine也成为Mutex的等待者）
 			new += 1 << mutexWaiterShift
 		}
 
@@ -161,16 +162,92 @@ func (m *Mutex) lockSlow() {
 		race.Acquire(unsafe.Pointer(m))
 	}
 }
-
 ```
 :::
+* 如果锁未锁定，且能直接加锁成功，则直接加锁并返回；
+* 否则进行慢路径加锁，此过程 goroutine 是被阻塞的；
+* 在慢路径加锁过程中，主要进行以下几步：
+* 自旋：
+  * 在正常模式下，且锁是 `muteLocked` 状态，且符合自旋条件才会自旋；
+  * `runtime_canSpin` 链接到 `sync_runtime_canSpin` 运行时函数，判断自旋条件：
+    * 1)，自旋次数要不大于 4 次，防止某个 goroutine 长时间占用 CPU 资源导致其他 goroutine 长时间被阻塞；
+    * 2)，CPU 核数要大于 1，单核没法多线程运行，更没法自旋；
+    * 3)，设置的 P 的最大数要大于空闲 P 的数量+自旋 P 的数量+1，表示当前 goroutine 可以自旋等待一个新的 P ；
+    * 4)，当前 goroutine 所在的 P 的本地队列（run queue）要为空，防止当前 goroutine 可以从自己所在的 P 的本地队列中获取任务而不必自旋等待；
+  * 自旋过程中不断的尝试将锁的状态更新完为 `mutexWoken`，并重新获取锁状态以及记录自旋次数，最多自旋四次；
+* 计算锁状态：
+  * 根据当前锁的状态分别计算上述三个标志位的状态值；
+  * 以及增加等待者数量；
+* 更新锁并获取锁：
+  * 尝试更新锁的状态，如果是在唤醒状态更新成功的话直接退出；
+  * 否则需要计算等待时间，判断是否需要将饥饿模式切换为正常模式；
+
 ### 3, UnLock()
-:::detail
+:::details
 ```go
+// Unlock 解锁 m。如果 m 在进入 Unlock 时未锁定，则为运行时错误。
+// 锁定的 Mutex 不与特定的 goroutine 相关联。允许一个 goroutine 锁定一个互斥锁，然后安排另一个 goroutine 来解锁它。
+func (m *Mutex) Unlock() {
+	if race.Enabled {
+		_ = m.state
+		race.Release(unsafe.Pointer(m))
+	}
 
+	// 如果减去 mutexLocked 标识之后正好是 0, 说明当前 goroutine 成功解锁，直接返回即可
+	// 否则，解锁失败，进入慢解锁路径
+	new := atomic.AddInt32(&m.state, -mutexLocked)
+	if new != 0 {
+		// 勾勒出慢速路径，以允许内联快速路径。为了在跟踪过程中隐藏 unlockSlow，我们在跟踪 GoUnblock 时会额外跳过一帧？
+		m.unlockSlow(new)
+	}
+}
+
+func (m *Mutex) unlockSlow(new int32) {
+	if (new+mutexLocked)&mutexLocked == 0 {
+		// 如果锁本来就没有锁定，则 m.state 为 0，new 为 -mutexLocked，此处抛出异常
+		throw("sync: unlock of unlocked mutex")
+	}
+	if new&mutexStarving == 0 {
+		// 正常模式
+		old := new
+		for {
+			// 如果没有 goroutine 等待，或者已经唤醒了 goroutine，或者已经有 goroutine 获得了锁，或者处于饥饿模式、则无需唤醒其他等待者，直接返回。
+			// 在饥饿模式中，所有权从解锁 goroutine 直接移交给下一个等待的 goroutine。
+			if old>>mutexWaiterShift == 0 || old&(mutexLocked|mutexWoken|mutexStarving) != 0 {
+				return
+			}
+			// 如果互斥锁存在等待者，会通过 sync.runtime_Semrelease 唤醒等待者并移交锁的所有权；
+			new = (old - 1<<mutexWaiterShift) | mutexWoken
+			if atomic.CompareAndSwapInt32(&m.state, old, new) {
+				runtime_Semrelease(&m.sema, false, 1)
+				return
+			}
+			old = m.state
+		}
+	} else {
+		// 饥饿模式：
+		// 将互斥锁所有权移交给下一个等待者，并给出我们的时间片，以便下一个等待者可以立即开始运行。
+		// 等待者被唤醒后会得到锁，在这时互斥锁还不会退出饥饿状态，mutexLocked 未设置，等待者会在唤醒后设置。
+		// 如果设置了 mutexStarving，则 mutex 仍然被视为锁定，因此新的 goroutine 不会获取它。
+		runtime_Semrelease(&m.sema, true, 1)
+	}
+}
 ```
 :::
+* 如果 Mutex 仅仅是锁定状态，其他状态位是 0 且没有等待的 goroutine，即：将`mutexLocked`对应的位置 0 后，整个状态值为0，则直接解锁成功，否则进入慢解锁路径；
+* 解锁一个未加锁的 `Mutex` 会抛出一个错误；
+* 慢解锁路径分为正常和饥饿两种模式的情况：
+  * 正常模式：
+    * 如果没有 goroutine 等待，或者有等待的 goroutine 但 `mutexLocked mutexWoken mutexStarving` 标志位不全为 0，则无需唤醒其他等待的 goroutine 直接返回，此时有肯定有 goroutine 在慢加锁路径中尝试加锁；
+    * 否则，将等待的 goroutine 数量减一，并尝试设置锁为 `mutexWoken`以及唤醒等待的 goroutine，并移交锁的所有权；
+  * 饥饿模式：
+    * 直接将锁的所有权交给等待队列中的第一个 goroutine；
+
 ### 4, Locker
 ```go
-
+type Locker interface {
+	Lock()
+	Unlock()
+}
 ```
+* Locker 表示一个可以加锁解锁的对象，提供了一个接口；
