--- a/docs/01.语言/01.Go/07.Sync.RWMutex.md
+++ b/docs/01.语言/01.Go/07.Sync.RWMutex.md
@@ -1,5 +1,5 @@
 ---
-title: Sync.RWMutex
+title: go-Sync.RWMutex
 date: 2023-11-02 22:04:07
 permalink: /pages/9b64aa/
 categories:
@@ -18,8 +18,8 @@ author:
 * RWMutex 适合读多写少的情况；
 
 ## 二、基本原理
-* 写 goroutine 获取锁后会阻止其他写 goroutine 继续获得锁，这是通过互斥锁实现的，同时还会阻止其他读 goroutine 获得锁，此时读 goroutine 只能继续等待，直到该写 goroutine 释放锁，如果此时再来写 goroutine 尝试获取锁，只能排在这些读 goroutine 之后；
-* 读 goroutine 获取锁后其他读 goroutine 能继续获得锁，会阻止写 goroutine 获得锁，此时写 goroutine 只能继续等待，直到这些读 goroutine 释放锁，如果此时再来读 goroutine ，只能排在这些写 goroutine 之后；
+* 写 goroutine 获取锁后会阻止其他写 goroutine 继续获得锁，这是通过互斥锁实现的，同时还会阻止其他读 goroutine 获得锁，此时读 goroutine 只能阻塞等待，直到该写 goroutine 释放锁后来唤醒读 goroutine，此时再来写 goroutine 尝试获取锁，只能排在这些读 goroutine 之后；
+* 读 goroutine 获取锁后其他读 goroutine 能继续获得锁，会阻止写 goroutine 获得锁，此时写 goroutine 只能阻塞等待，并阻止后续的读 goroutine 获得锁，直到这些在读 goroutine 释放锁后唤醒写 goroutine，此时再来读 goroutine ，只能排在这些写 goroutine 之后；
 
 ## 三、基本用法
 ```go
@@ -43,13 +43,35 @@ func SetVal(v int) {
 ## 四、源码解读
 ### 1，RWMutex
 ```go
-
+type RWMutex struct {
+	w           Mutex  // 互斥锁
+	writerSem   uint32 // 信号量，写等待读
+	readerSem   uint32 // 信号量，读等待写
+	readerCount int32  // 正在执行读操作的 goroutine 数量
+	readerWait  int32  // 写操作被阻塞时等待的读操作个数
+}
 ```
+* w 复用互斥锁，用于保证只有一个写 goroutine 获得锁；
+* writerSem，信号量，写 goroutine 通过该信号量阻塞等待读 goroutine 唤醒；
+* readerSem，信号量，读 goroutine 通过该信号量阻塞等待读 goroutine 唤醒；
 
 ### 2，Lock()
 :::details
 ```go
-
+// Lock 锁定 rw 用于写入，如果锁已锁定以进行读取或写入，则 Lock 将被阻塞，直到锁可用
+func (rw *RWMutex) Lock() {
+	// 通过互斥锁加写锁，如果已经有其他 goroutine 加上了写锁该 goroutine 就只能阻塞或自旋等待
+	// 加上写锁后，互斥锁也会阻止其他 goroutine 继续加锁，其他 goroutine 只能阻塞或自旋等待
+	rw.w.Lock()
+	// 加上写锁后，将读操作的数量置为负数，用于阻塞继续添加读锁
+	r := atomic.AddInt32(&rw.readerCount, -rwmutexMaxReaders) + rwmutexMaxReaders
+	if r != 0 && atomic.AddInt32(&rw.readerWait, r) != 0 {
+		// 当读操作的数量不为 0 且 读操作等待加读锁的数量不为 0 ，则将当前 goroutine 阻塞
+		// 即使已经获得了互斥锁（能够阻止后续写操作继续获得互斥锁）
+		// 直到等待加读锁的 readerWait 为 0 后被唤醒
+		runtime_SemacquireMutex(&rw.writerSem, false, 0)
+	}
+}
 ```
 :::
 
